fix versions align

--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -75,6 +75,7 @@
   height 90px // This decides how flexbox orders the colums
   display flex
   justify-content center
+  align-items center
   flex-flow column wrap
   align-content stretch
 
